sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort(i:Int,tab:list[char])  {

	while(i=0;i++;i<getNombreValeurs()){
		
		if(getValeur(i)>getValeur(i+1)){
			
			echange(i,i+1);
			
		}

		i++;
	}
}
